Fix layout breakage when order item table overflows. closes #11841

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -925,6 +925,7 @@ ul.wc_coupon_list_block {
 	}
 	.woocommerce_order_items_wrapper {
 		margin: 0;
+		overflow-x: auto;
 
 		table.woocommerce_order_items {
 			width: 100%;
